--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "bulid": "next bulid",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
